--- a/halaman6.html
+++ b/halaman6.html
@@ -68,7 +68,7 @@ let startAngle = 0;
 let spinTime = 0;
 let spinTimeTotal = 0;
 
-const hukuman = ["Hukuman 1", "Hukuman 2", "Hukuman 3", "Hukuman 4", "Hukuman 5", "Hukuman 6", "Hukuman 7", "Hukuman 8"];
+const hukuman = ["Push Up 10/20", "Karaoke Dadakan", "Beri Pantun", "Stand up comedy ", "Dance Challenge", "Mie lidi challenge", "Terserah bu kus", "Puji anggota kelompok ini"];
 const colors = ['#E74C3C', '#3498DB', '#F1C40F', '#1ABC9C', '#9B59B6', '#34495E', '#E67E22', '#2ECC71'];
 
 function drawWheel() {
