--- a/halaman6.html
+++ b/halaman6.html
@@ -25,7 +25,7 @@
         button {
             margin-top: 20px;
             padding: 10px 20px;
-            font-size: 25px;
+            font-size: 18px;
             border: none;
             border-radius: 5px;
             background-color: #3498db;
@@ -46,6 +46,10 @@
     </style>
 </head>
 <body>
+  <audio autoplay loop style="display:none;">
+    <source src="Hal 5.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+  </audio>
     <div class="wheel-container">
         <canvas id="wheelCanvas" width="500" height="500"></canvas>
         <button id="spinButton">Putar Roda!</button>
@@ -68,7 +72,7 @@ let startAngle = 0;
 let spinTime = 0;
 let spinTimeTotal = 0;
 
-const hukuman = ["Push Up 10/20", "Karaoke Dadakan", "Beri Pantun", "Stand up comedy ", "Dance Challenge", "Mie lidi challenge", "Terserah bu kus", "Puji anggota kelompok ini"];
+const hukuman = ["Hukuman 1", "Hukuman 2", "Hukuman 3", "Hukuman 4", "Hukuman 5", "Hukuman 6", "Hukuman 7", "Hukuman 8"];
 const colors = ['#E74C3C', '#3498DB', '#F1C40F', '#1ABC9C', '#9B59B6', '#34495E', '#E67E22', '#2ECC71'];
 
 function drawWheel() {
@@ -98,7 +102,7 @@ function drawWheel() {
         ctx.rotate(slice * (index + 0.5));
         ctx.textAlign = "right";
         ctx.fillStyle = "#fff"; // Warna teks
-        ctx.font = "13px Arial"; // Ubah ukuran font di sini
+        ctx.font = "20px Arial"; // Ubah ukuran font di sini
         ctx.fillText(h, wheelRadius - 10, 10); // Posisi teks
         ctx.restore();
     });
@@ -106,6 +110,8 @@ function drawWheel() {
     ctx.restore();
     drawArrow();
 }
+
+
 
 
 
