--- a/halaman6.html
+++ b/halaman6.html
@@ -69,7 +69,7 @@ let startAngle = 0;
 let spinTime = 0;
 let spinTimeTotal = 0;
 
-const hukuman = ["Hukuman 1", "Hukuman 2", "Hukuman 3", "Hukuman 4", "Hukuman 5", "Hukuman 6", "Hukuman 7", "Hukuman 8"];
+const hukuman = ["Puji kelompok ini", "Terserah bu kus", "Terserah bu kus", "Dance challenge", "Stand Up comedy", "Push up 10/20", " Beri pantun", "Karaoke banteng"];
 const colors = ['#E74C3C', '#3498DB', '#F1C40F', '#1ABC9C', '#9B59B6', '#34495E', '#E67E22', '#2ECC71'];
 
 function drawWheel() {
@@ -99,7 +99,7 @@ function drawWheel() {
         ctx.rotate(slice * (index + 0.5));
         ctx.textAlign = "right";
         ctx.fillStyle = "#fff"; // Warna teks
-        ctx.font = "20px Arial"; // Ubah ukuran font di sini
+        ctx.font = "13px Arial"; // Ubah ukuran font di sini
         ctx.fillText(h, wheelRadius - 10, 10); // Posisi teks
         ctx.restore();
     });
