--- a/halaman2.html
+++ b/halaman2.html
@@ -12,6 +12,7 @@
         <p>2. M.Fatkhih al mubarok🥵</p>
         <p>3. Ragana soulan karim🥶</p>
         <p>Selamat menikmati game Kamii!<p>
+            <p>KYAHHH >////<</p>
         
         <button onclick="window.location.href='halaman3.html'">Next</button>
       
